[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["안성철 <scahn@huray.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.1"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
